# finbot

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.mcp  Makefile  README.md  docker-compose.yml  finbot-cert.yaml  finbot-ingress.yaml  push.sh  pyproject.toml  requirements.txt  run_frontend.py
app/: __init__.py  llm_service.py  main.py
app/finbot/: agents.py  graphs.py  mcp_agents.py  nodes.py  services.py  test_mcp_client.py  tools.py
app/finbot/mcp_finbot/: mcp_servers_finbot.py  mcp_tools.py
app/llm/: groq.py  llm_service.py  rag_query_engine.py
infra/: .terraform.lock.hcl  .terraform.tfstate.lock.info  backend.tf  frontend.tf  gke.tf  ingress.tf  k8s_providers.tf  main.tf  mcp.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
tests/: conftest.py
tests/functional/: test_graph_workflow.py
tests/unit/: test_mcp_server.py  test_mcp_tools.py  test_rag_engine_service.py  test_stock_price_nodes.py  test_supervisor_node.py
ui/: __init__.py  ui_dash.py
