[tool.poetry]
name = "finbot"
version = "0.1.0"
description = "A financial AI assistant to answer your queries on S&P500 companies"
authors = ["Mattia Pennacchietti <1404268@gmail.com>"]
readme = "README.md"
packages = [
    {include = "app"},
    {include = "ui"}
]

[tool.poetry.dependencies]
python = ">=3.13, <4.0"
fastapi = ">=0.115.11,<0.116.0"
uvicorn = ">=0.34.0,<0.35.0"
faiss-cpu = ">=1.10.0,<2.0.0"
sentence-transformers = ">=3.4.1,<4.0.0"
pymupdf = ">=1.25.4,<2.0.0"
requests = ">=2.32.3,<3.0.0"
pydantic = ">=2.10.6,<3.0.0"
python-dotenv = "^1.0.0"
openai = "^1.3.5"
pandas = "^2.1.3"
matplotlib = "^3.8.1"
yfinance = "^0.2.31"
plotly = "^5.18.0"
dash = "^3.0.0"
langgraph = "^0.3.18"
langchain-core = "^0.3.47"
langchain-openai = "^0.3.9"
langchain-groq = "^0.3.1"
langchain-anthropic = "^0.3.10"
langchain-community = "^0.3.20"
langchain-experimental = "^0.3.4"
pandas-datareader = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"

[tool.poetry.scripts]
start-backend = "app.main:main"
start-frontend = "ui.ui_dash:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
